// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditorMessages.protobuf;

message Pus142ParameterMonitoringDefinition {
extensions 11 to 111;

  optional ccsds_mal.protobuf.UINTEGER paramMonId = 1;
  optional ccsds_mal.protobuf.ULONG uniqueId = 2;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 3;
  optional ccsds_mal.protobuf.STRING serviceApidName = 4;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeId = 5;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeId = 6;
  optional ccsds_mal.protobuf.STRING paramMonName = 7;
  optional ccsds_mal.protobuf.UINTEGER fmonId = 8;
  optional ccsds_mal.protobuf.STRING fmonIdLabel = 9;
  optional ccsds_mal.protobuf.UINTEGER status = 10;
}
